test changes local

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </div>
 
           <div class="button page-link first-btn" dest="about">
-            View my work
+            View my works
             <i id="arrow-in-btn" class="mdi fas fa-arrow-right"></i>
             <!-- <i class="fas fa-arrow-down"></i> -->
           </div>
