--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
     />
 
-    <link rel="stylesheet" href="main-stoled.css" />
+    <link rel="stylesheet" href="/styles/main-stoled.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
@@ -19,9 +19,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/2.1.11/jquery.mixitup.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.0/jquery.waypoints.min.js"></script>
-    <script src="/pt.min.js"></script>
-    <script src="/index.js"></script>
-    <script src="/modal.js"></script>
+    <script src="/scripts/pt.min.js"></script>
+    <script src="/scripts/index.js"></script>
+    <script src="/scripts/modal.js"></script>
   </head>
   <body data-new-gr-c-s-check-loaded="14.981.0">
     <div class="overflow-wrap">
@@ -744,6 +744,6 @@
       <img src="img/slides/walker-2.jpg" /> -->
     </div>
 
-    <script src="/canvas.js"></script>
+    <script src="scripts/canvas.js"></script>
   </body>
 </html>
