changed architecrule of the site

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Tangerine">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/2.1.11/jquery.mixitup.min.js"></script>
@@ -702,8 +704,8 @@
     </div>
 
     <div id="preload">
-      <img src="/images/laptop-bg3.png" />
-      <img src="img/slides/ordering-1.jpg" />
+      <img src="images/laptop-bg3.png" />
+      <img src="images/slides/ordering-1.jpg" />
       <!-- <img src="img/filler.jpg" />
       <img src="img/thumb-1.jpg" />
       <img src="img/thumb-2.jpg" />
