--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
               <div class="page-link" dest="blog">blog</div>
               <div class="page-link" dest="contact">contact</div>
             </div>
-            <i class="mdi mdi-menu"></i>
+            <!-- <i class="mdi mdi-menu"></i> -->
+            <i class="fa fa-bars" aria-hidden="true"></i>
+
           </nav>
         </div>
       </section>
