fixed menu icon a

--- a/index.html
+++ b/index.html
@@ -52,11 +52,17 @@
             <div class="detail"></div>
             <a href="#" target="_blank"
               ><div class="button">
-                <i class="mdi mdi-open-in-new"></i>VIEW SITE
+                <i class="mdi mdi-open-in-new"><i class="fas fa-external-link-alt"></i>
+
+              </i>VIEW SITE
               </div></a
             >
           </div>
-          <i class="close mdi mdi-close"></i>
+          <i class="close mdi mdi-close">
+            <i class="close fas fa-times"></i>
+
+
+          </i>
         </div>
       </div>
 
@@ -656,7 +662,7 @@
               <div>
                 Your message was sent successfully. Thanks!<span
                   id="close"
-                  class="mdi mdi-close"
+                  class="mdi mdi-close fas fa-times"
                 ></span>
               </div>
             </div>
