--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
     />
 
-    <link rel="stylesheet" href="styles/main-stoled.css" />
+    <link rel="stylesheet" href="styles/main.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
