--- a/index.html
+++ b/index.html
@@ -603,6 +603,7 @@
     <div id="preload">
       <img src="images/laptop-bg3.png" />
       <img src="images/slides/ordering-1.jpg" />
+      <img src="images/filler.png" />
     </div>
 
     <script src="scripts/canvas.js"></script>
