--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
 
         <div class="icon-wrap flex row">
           <a
-            href="https://il.linkedin.com/in/leo-korsunsky-36465471"
+            href="https://www.linkedin.com/in/leokorsy/"
             target="_blank"
           >
             <div class="flex icon" id="icon-2">
