--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@
                 </div>
 
                 <div class="info-body">
-                  Solution-driven developer adept at contributing to highly
+                  Solution-driven developer adept at contributing to the highly
                   collaborative work environment, finding solutions and
                   determining customer satisfaction. Proven experience
-                  developing consumer-focused websites using HTML, CSS,
+                  developing customer-focused websites using HTML, CSS,
                   JavaScript, Nodejs, etc. Built products for desktop users
                   over <span id="experience">5</span>+ years, meeting the highest standards for web design, user
                   experience, best practices and speed. Designed and developed
